# dodo-rl-genesis

./: .dockerignore  .gitignore  Makefile  pyproject.toml  requirements.txt  setup.sh
.devcontainer/: devcontainer.json
configs/: default.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  tmux.conf
scripts/: dodo_balance.py  dodo_train.py  download_assets.sh  eval.py  gamepad_debug.py  gamepad_play.py  monitor.py  preview_pose.py  train.py  vast_launch.sh
src/envs/: __init__.py  dodo_env.py  genesis_env.py
src/streaming/: index.html  server.py  video_recorder.py
src/trainers/: trainer.py
