[project]
name = "dodo-rl-genesis"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch==2.3.0",
    "torchvision==0.18.0",
    "genesis-world",
    "tensordict",
    "rsl-rl-lib>=5.0.0",
    "tensorboard",
    "imageio[ffmpeg]",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "ipdb",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipython",
    "ipdb",
]
