[project]
name = "dodo-rl-genesis"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "genesis-world",
    "tensordict",
    "rsl-rl-lib>=5.0.0",
    "tensorboard",
    "imageio[ffmpeg]",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "ipdb",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipython",
    "ipdb",
]
